tui/src/bottom_pane/snapshots/estelle_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_additional_context_limit.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Changes save automatically.                                                             
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   /tmp/pre-tool-use.sh                                                                                
  Timeout   30s                                                                                                 
  Context   unlimited                                                                                           
  Trust     Trusted                                                                                             
                                                                                                                
  Press space or enter to toggle; esc to go back
