tui/src/bottom_pane/snapshots/estelle_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PermissionRequest hooks                                                                                       
  Turn hooks on or off. Changes save automatically.                                                             
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PermissionRequest                                                                                   
  Matcher   Bash                                                                                                
  Source    Admin config                                                                                        
  Command   /enterprise/hooks/permission-check.sh                                                               
  Timeout   30s                                                                                                 
  Trust     Managed                                                                                             
                                                                                                                
  Managed hooks are always on; press esc to go back
