tui/src/bottom_pane/snapshots/estelle_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_selected_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Changes save automatically.                                                             
                                                                                                                
  [x] Hook 1                                                                                                    
  [x] Hook 2                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    Admin config                                                                                        
  Command   /enterprise/hooks/pre-tool-use-2.sh                                                                 
  Timeout   30s                                                                                                 
  Trust     Managed                                                                                             
                                                                                                                
  Managed hooks are always on; press esc to go back
